# storage/docs/api-docs.json
@@ -531,7 +531,7 @@
         "/orders": {
             "get": {
                 "tags": [
-                    "Order-cust"
+                    "Order"
                 ],
                 "summary": "Get a listing of the Orders.",
                 "description": "Get all Orders",
@@ -568,7 +568,7 @@
             },
             "post": {
                 "tags": [
-                    "Order-cust"
+                    "Order"
                 ],
                 "summary": "Store a newly created Order in storage",
                 "description": "Store Order",
@@ -615,7 +615,7 @@
         "/orders/{id}": {
             "get": {
                 "tags": [
-                    "Order-cust"
+                    "Order"
                 ],
                 "summary": "Display the specified Order",
                 "description": "Get Order",
@@ -658,7 +658,7 @@
             },
             "put": {
                 "tags": [
-                    "Order-cust"
+                    "Order"
                 ],
                 "summary": "Update the specified Order in storage",
                 "description": "Update Order",
@@ -710,7 +710,7 @@
             },
             "delete": {
                 "tags": [
-                    "Order-cust"
+                    "Order"
                 ],
                 "summary": "Remove the specified Order from storage",
                 "description": "Delete Order",
@@ -755,7 +755,7 @@
         "/orders/complete/{id}": {
             "put": {
                 "tags": [
-                    "Order-cust"
+                    "Order"
                 ],
                 "summary": "Update status order to complete",
                 "description": "complete order",
@@ -800,7 +800,7 @@
         "/orders/detail/{id}": {
             "get": {
                 "tags": [
-                    "Order-cust"
+                    "Order"
                 ],
                 "summary": "Display Detail for specified Order",
                 "description": "Get details of Order",
@@ -1156,7 +1156,12 @@
                             "type": "object"
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
@@ -1196,7 +1201,12 @@
                             "type": "object"
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
             }
         },
         "/plans/{id}": {
@@ -1236,7 +1246,12 @@
                             "type": "object"
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
@@ -1283,7 +1298,12 @@
                             "type": "object"
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -1321,7 +1341,12 @@
                             "type": "object"
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
             }
         },
         "/plan/specialist": {
